feat: first version
This version need test.

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,7 @@
     ],
     "minimum-stability": "dev",
     "license": "MIT",
-    "require": {}
+    "require": {
+        "php": ">=7.4"
+    }
 }
