--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,8 @@
     "name": "frantatacz/smssluzba",
     "description": "This PHP library is created for sms-sluzba.cz. It will allow you to send SMS safely and easily.",
     "type": "library",
-    "autoload": {
-        "psr-4": {
-            "FrantataCZ\\": "src/"
-        }
-    },
+    "files": ["src/FrantataCZ/Exception.php", "src/FrantataCZ/smssluzba.php"],
+
     "authors": [
         {
             "name": "Frantata",
