--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "This PHP library is created for sms-sluzba.cz. It will allow you to send SMS safely and easily.",
     "type": "library",
     "files":  {
-        "classmap": ["src", "FrantataCZ", "frantatacz", "smssluzba"]
+        "files": ["src/FrantataCZ/autoloader.php"]
     },
 
     "authors": [
