--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "frantatacz/smssluzba",
     "description": "This PHP library is created for sms-sluzba.cz. It will allow you to send SMS safely and easily.",
     "type": "library",
-    "files":  {
-        "files": ["src/FrantataCZ/autoloader.php"]
+    "autoload":  {
+        "files": ["src/FrantataCZ/autoloader.php", "src/FrantataCZ/smssluzba.php"]
     },
 
     "authors": [
