--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "This PHP library is created for sms-sluzba.cz. It will allow you to send SMS safely and easily.",
     "type": "library",
     "autoload":  {
-        "files": ["src/FrantataCZ/autoloader.php", "src/FrantataCZ/smssluzba.php"]
+        "files": ["src/FrantataCZ/smssluzba.php", "src/FrantataCZ/Exception.php.php"]
     },
 
     "authors": [
