--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,11 @@
     "description": "This PHP library is created for sms-sluzba.cz. It will allow you to send SMS safely and easily.",
     "type": "library",
     "autoload":  {
-        "files": ["src/FrantataCZ/smssluzba.php", "src/FrantataCZ/Exception.php"]
+        "files": [
+            "src/FrantataCZ/smssluzba.php",
+            "src/FrantataCZ/Exception.php",
+            "src/FrantataCZ/Template.php"
+        ]
     },
 
     "authors": [
