--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "ext-json": "*",
+        "ext-simplexml": "*"
     }
 }
